# topotorch

./: .gitignore  README.md  pyproject.toml
topotorch/mesh/: Lbeam.json  rect.json
topotorch/notebooks/: fea.ipynb  topopt.ipynb  topopt_mass_cons.ipynb
topotorch/src/: bc.py  cons_loss.py  element.py  fe_struct.py  geometry.py  material.py  mesher.py  mma.py  solver.py  utils.py  viz.py
